<resources>
    <string name="app_name">Dailybooster</string>

    <string name="title_activity_auteurs">Authors</string>
    <string name="title_activity_category">Categories</string>
    <string name="title_activity_favorites">My Favorites</string>
    <string name="title_activity_quotes">Quotes</string>
    <string name="title_activity_quote">Quote</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_about">About</string>
    <string name="ratethisapp_msg">If you like this app.Please take a moment to rate it. It would\'t take more than a minute.\nEnjoy!</string>
    <string name="ratethisapp_title">Rate Us</string>
    <string name="about_msg">A student of life considers the world a classroom.\n(Harvey Mackay)\n\nThe Quotes Garden App v1.0\nBy srima karekallu </string>
    <string name="btn_ok">OK</string>
    <string name="copy_msg">The quote has been copied to clipboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_add_to_favorites">Add to Favorites</string>
    <string name="quote_of_day">Quote of the day</string>
    <string name="action_share">Share</string>
    <string name="rate_it">Rate it</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="share">Share via</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_user_setting">Settings</string>
    <string name="speaker_enable">Reader</string>
    <string name="notif">Notification</string>
    <string name="pref_update_setting">General</string>
    <string name="pref_other">Other</string>
    <string name="pref_user_time">Time of Quote of the day</string>
    <string name="action_settings">Settings</string>
    <string name="btn_quotes">Quotes</string>
    <string name="btn_authors">Authors</string>
    <string name="btn_favorites">My Favorites</string>
    <string name="btn_categories">Categories</string>
    <string name="btn_qteday">Quote Of The Day</string>
    <string name="btn_rateus">Rate Us</string>
    <string name="btn_LoadMore">Load More Quotes...</string>

    <!-- SETTINGS -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
