<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#fff2f2f2"
    tools:context=".MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/l1"
    android:layout_marginTop="30dp"

    android:orientation="horizontal">
        <Button
            android:id="@+id/btn_quotes"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/btn_quotes"
            android:paddingRight="40dp"
            android:background="#fff2f2f2"
            android:text="@string/btn_quotes" />

        <Button
            android:id="@+id/btn_authors"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/btn_authors"
            android:paddingLeft="30dp"
            android:background="#fff2f2f2"
            android:text="@string/btn_authors" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/l1"
        android:id="@+id/l2"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_favorites"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/btn_favorites"
            android:paddingRight="30dp"
            android:background="#fff2f2f2"
            android:text="@string/btn_favorites" />

        <Button
            android:id="@+id/btn_categories"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/btn_categories"
            android:paddingLeft="30dp"
            android:background="#fff2f2f2"
            android:text="@string/btn_categories" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/l2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_qteday"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/btn_qteday"
            android:paddingRight="10dp"
            android:background="#fff2f2f2"
            android:text="@string/btn_qteday" />
    </LinearLayout>


</RelativeLayout>
